# chisha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  SECURITY.md  profile.yaml  pyproject.toml
.codex-review/: final-pr-review.md  phase-1-diff-review.md
.github/workflows/: ci.yml
apps/debug-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/sandbox-lab/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
chisha/: __init__.py  agent_choose.py  agent_cli.py  agent_orchestration.py  agent_protocol.py  agent_round_store.py  agent_skill_init.py  api.py  api_lab.py  api_living.py  cli.py  clock.py  clock_provider.py  collector_contract.py  context.py  core_api_helpers.py  data_root.py  debug_recommend.py  debug_server.py  debug_what_if.py  feedback.py  feedback_signal.py  feedback_store.py  feedback_text_extract.py  install_root.py  l0_constraints.py  l1_extractor.py  l1_prefs.py  lab_summary.py  llm_client.py  llm_client_openrouter.py  loader.py  long_term_prefs.py  manifest.py  methodology.py  non_dish_rules.py  reason.py  recall.py  reference_resolver.py  refine.py  (+20 more)
chisha-debug/project/: Workflow A · 分析 trace.html  app.jsx  dag-header.jsx  index.html  palette-options.html  panel-final.jsx  panel-l3.jsx  panel-refine.jsx  style-options.html  wa-app.jsx  wa-rounds-mock.jsx
chisha/llm_providers/: __init__.py  anthropic_api.py  claude_code_cli.py  openrouter.py
chisha/static/: debug.html  logic.html
data/: aliases.json  manifest.json
data/shenzhen-bay/: conflicts_ack.json  dish_id_conflicts.json  dishes_raw.json  dishes_tagged.json  non_dish_quarantine.json  restaurants.json  review_sample.md  review_sample.xlsx
data/shenzhen-keji/: dishes_raw.json  dishes_tagged.json  restaurants.json
docs/: BACKLOG.md  CONTRACTS.md  CONTRIBUTING_DOCS.md  DEBUG_REPLAY_DESIGN.md  DECISIONS.md  IMPLEMENTATION_LOG.md  INTRODUCTION.md  L3_RERANK_REDESIGN.md  PRD.md  RECOMMEND_PRINCIPLES.md  ROADMAP.md  agent-integration-approach.md  api.md  data-flow.md  data-pipeline.md  decisions.md  intro-for-colleagues.md  refactor_living_lab.md  refactor_living_lab_handoff.md  refactor_living_lab_migration.md  style-guide.md
docs/archive/: DEBUG_REPLAY_DESIGN_phase0.md  DEBUG_REPLAY_PRD_phase0.md  DECISIONS_phase0.md  DESIGN_phase0.md  IMPLEMENTATION_LOG_phase0.md  L3_RERANK_REDESIGN_phase0.md  RECOMMEND_PRINCIPLES_phase0.md  ROADMAP_phase0.md
docs/design_briefs/: 2026-05-16-ai-friendly-integration-v2-consensus.md  2026-05-19-l2-refine-weight-overlay.md  2026-05-19-sandbox-lab.md  D-085-PR-E.md  v1_user_view.md
docs/proposals/: 2026-05-16-ai-friendly-integration-v2-consensus.md  2026-05-20-prompt-effect-optimization.codex-review.md  2026-05-21-faithful-refine-true-fulfillment.md  2026-05-21-prompt-step3-cache-and-examples.md  2026-05-25-ai-friendly-integration.md  2026-05-25-feedback-short-loop-b001.md  2026-05-26-collector-chisha-contract.md  2026-05-26-stable-entity-id.md  2026-05-28-distributable-shared-core.md  2026-05-29-agent-core-decoupling.md  agent-integration-approach.md
docs/wip/: B-001-v2-design-brief.md  D-083-pr2-pr3-design-brief.md  D-083_feedback_trace_observability_brief.md
eval/: dish_tagging_model_eval_spec.md
plans/: Debug.diff-review.md  Debug.plan-review.md  Debug.plan.md  S-01.plan-review.md  S-01.plan.md  S-02.plan-review.md  S-02.plan.md  S-03.diff-review.md  S-03.plan-review.md  S-03.plan.md  S-04.plan-review.md  S-04.plan.md  S-05.plan-review-v4-bigscope.md.bak  S-05.plan-review.md  S-05.plan-v4-bigscope.md.bak  S-05.plan.md  S-06a.diff-review.md  S-06a.plan-review-iter1-3.md.bak  S-06a.plan-review.md  S-06a.plan.md  S-06b.plan-review.md  S-06b.plan.md  S-06c.plan-review.md  S-06c.plan.md  S-07.diff-review.md  S-07.plan-review.md  S-07.plan.md  S-08.diff-review.md  S-08.plan-review.md  S-08.plan.md  S-09.diff-review.md  S-09.plan-review.md  S-09.plan.md  S-10.diff-review.md  S-10.plan-review.md  S-10.plan.md  T-00.plan-review-v2.md  T-00.plan-review.md  T-00.plan.md  T-00.review-v2.md  (+41 more)
prompts/: README.md  _dev_notes.md  l1_extract.md  parse_feedback.md  parse_refine_intent.md  parse_refine_intent_v2.md  reason_one_line.md  rerank_system.md  rerank_topn.md  rerank_user.md  tag_dishes.md  tag_dishes.v3.pre_dual.md
scripts/: _common.py  audit_recall.py  baseline_l2_snapshot.py  baseline_l3_prompt_ab.py  bootstrap_l1_from_legacy.py  build_manifest.py  build_skill_bundle.py  compare_traces.py  dry_run.py  eval_recommend.py  inspect_candidates.py  migrate_stable_ids.py  migrate_state.py  mock_tagged.py  normalize_v3_enums.py  refine_eval_runner.py  refresh_from_collector.py  sample_for_review.py  tag_dishes.py  tag_via_api.py  tag_via_subagent.py  validate_data.py
specs/: S-01.md  S-02.md  S-04.md  S-05.md  S-06c.md  S-08.md  S-10.md  T-P1a-01.md  T-P1a-03.md  T-P1b-02.md  T-PR-02.md  T-PR-04.md  T-PR-06.md  tasks.json
tests/: _v2_compat.py  conftest.py  golden_cases.yaml  test_acceptance_d073_d074.py  test_acceptance_d076_d077.py  test_agent_choose.py  test_agent_cli_e2e.py  test_agent_orchestration.py  test_agent_protocol.py  test_agent_round_store.py  test_api_split_routing.py  test_api_v2.py  test_bootstrap_l1_from_legacy.py  test_build_skill_bundle.py  test_claude_code_cli.py  test_cli_wrapper.py  test_collector_contract.py  test_context.py  test_d079_pr1_frozen_injection.py  test_d079_pr1_golden.py  test_d079_pr2_endpoints.py  test_d079_pr2_what_if.py  test_d104_di_boundary.py  test_d104_followup.py  test_d104_minimal_trace.py  test_data_root.py  test_fallback_plan_d102.py  test_feedback.py  test_feedback_recency.py  test_feedback_signal.py  test_feedback_signal_snapshot.py  test_feedback_trace_d083.py  test_feedback_v2.py  test_feishu_card.py  test_hard_filter_event.py  test_has_legacy_state.py  test_install_skill.py  test_intent_score.py  test_l0_constraints.py  test_l1_extractor.py  (+64 more)
(+294 files in other folders)
