[project]
name = "chisha-meal"
version = "0.1.0"
description = "今天吃点啥 - 个人 AI 原则派点餐执行外包"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "志丹", email = "mzd5646241@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]
# D-104 Step 0: agent-only core 只需这 5 个轻依赖. server / 自调 LLM / excel 等
# 重依赖降级到下方 optional-dependencies (core 在静态依赖图上自然到不了它们).
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "ruamel-yaml>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/zidanema/chisha"
Repository = "https://github.com/zidanema/chisha"

[project.scripts]
chisha = "chisha.cli:main"
# P2: `chisha-meal` 别名 = dist 名同名可执行, 让 `uvx chisha-meal ...` / `uv tool install
# chisha-meal` 后 `chisha-meal <verb>` 都解析得到 (与 `chisha` 等价).
chisha-meal = "chisha.cli:main"

[project.optional-dependencies]
# D-104 Step 0: 跑全链路 server + 自调 LLM 精排才需要 (agent-only core 不需要).
# fastapi/uvicorn → web_api/debug_server; anthropic/openai → llm_client*.
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "anthropic>=0.40.0",
    "openai>=2.36.0",
]
dev = [
    "chisha-meal[web]",
    "pytest>=8.0",
    "openpyxl>=3.1",
    # pandas: 当前 chisha/ 与 scripts/ 均无 import (dead requirement), 暂留 dev 候选移除.
    "pandas>=3.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_claude_cli: tests that need claude CLI + Max subscription (opt-in, skipped in CI)",
]
# 默认不跑 integration; 显式 -m requires_claude_cli 才跑 (Codex review P2#4)
addopts = "-m 'not requires_claude_cli'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chisha"]
# T-DIST-01 B.0: 标准 wheel 排除 (force-include 旁路, 但留作 source dist 守门).
exclude = [
    "apps/",
    "plans/",
    "docs/",
    "tmp/",
    "logs/",
    "eval/",
    "tests/",
    "scripts/",
    ".claude/",
    "design/",
    "specs/",
    "integrations/",
]

# T-DIST-01 B.0: force-include 把 chisha/ 包外的资源进 wheel.
# 形态: 源 = repo root 相对路径; 目标 = `chisha/<name>` (与包同根, 让 install_root() / "prompts" 等命中).
# 注意: hatch force-include 旁路 exclude — 必须 per-file 枚举 runtime 真正消费的数据,
# 否则 data/*/dishes_raw.json (4.7MB 离线打标中间产物) / review_sample.* / conflicts_ack.json 等会污染 wheel.
# Runtime 消费 (recall.py grep): restaurants.json + dishes_tagged.json (两 zone 文件).
# aliases.json (D-099.2 别名表) / data/manifest.json (D-102.3 bundle 闸门) 顶层两份.
[tool.hatch.build.targets.wheel.force-include]
"prompts" = "chisha/prompts"
"profiles/methodologies" = "chisha/profiles/methodologies"
"profile.yaml" = "chisha/profile.yaml"
"data/manifest.json" = "chisha/data/manifest.json"
"data/aliases.json" = "chisha/data/aliases.json"
"data/shenzhen-bay/restaurants.json" = "chisha/data/shenzhen-bay/restaurants.json"
"data/shenzhen-bay/dishes_tagged.json" = "chisha/data/shenzhen-bay/dishes_tagged.json"
