[project]
name = "chisha-meal"
version = "0.1.0"
description = "今天吃点啥 - 个人 AI 原则派点餐执行外包"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "志丹", email = "mzd5646241@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]
# D-104 Step 0: agent-only core 只需这 5 个轻依赖. server / 自调 LLM / excel 等
# 重依赖降级到下方 optional-dependencies (core 在静态依赖图上自然到不了它们).
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "ruamel-yaml>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/zidanema/chisha"
Repository = "https://github.com/zidanema/chisha"

# D-105.1: 形态A (uv tool install → 全局 chisha 命令) 已退役. 不再注册 [project.scripts]
# console 入口; 接入唯一形态 = 形态B 自包含 bundle (build_skill_bundle --install → wrapper
# scripts/chisha)。repo dev 仍走 `uv run python -m ...` (editable, 不需 console script)。

[project.optional-dependencies]
# D-104 Step 0: 跑全链路 server + 自调 LLM 精排才需要 (agent-only core 不需要).
# fastapi/uvicorn → web_api/debug_server; anthropic/openai → llm_client*.
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "anthropic>=0.40.0",
    "openai>=2.36.0",
]
dev = [
    "chisha-meal[web]",
    "pytest>=8.0",
    "openpyxl>=3.1",
    # pandas: 当前 chisha/ 与 scripts/ 均无 import (dead requirement), 暂留 dev 候选移除.
    "pandas>=3.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "requires_claude_cli: tests that need claude CLI + Max subscription (opt-in, skipped in CI)",
]
# 默认不跑 integration; 显式 -m requires_claude_cli 才跑 (Codex review P2#4)
addopts = "-m 'not requires_claude_cli'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# D-105.1: 形态A wheel 分发已退役 — force-include / wheel exclude / 内容闸门 (旧
# test_wheel_content_gate.py) 整体拆除. 形态B bundle (build_skill_bundle.py) 自带 DATA_FILES /
# RESOURCE_DIRS 拷贝清单, 不经 wheel. 本节仅保留 hatchling 识别 `chisha` 包, 让 repo dev
# `uv run` editable 安装可用 (editable 引用源文件在位, 不需 force-include 打包数据)。
[tool.hatch.build.targets.wheel]
packages = ["chisha"]
